feat: start working on sites api
